# OS_3_semester

./: README.md
os_2/: child.c  main.c
os_3/: main.c
os_4/: child.c  main.c
os_5/: CMakeLists.txt  lib.h  lib1.c  lib2.c  main1.c  main2.c
os_6/: Makefile  README.md  kmp.c  kmp.h  main.c  node.c
os_kp_3/: a.c  b.c  c.c  КП отчет.odt
